--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toboolist</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
-<body class="">
+<body class="debug">
     <header id="site_header">
         <img id="logo_image" src="./img/Logo.png">
         <span id="logo_text">Toboolist</span>
