Button fix commit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 
-<body class="debug">
+<body class="">
     <header id="site_header">
         <img id="logo_image" src="./img/Logo.png">
         <span id="logo_text">Toboolist</span>
@@ -23,7 +23,7 @@
                 <div class="bottom">
                     <details>
                         <summary>
-                            <strong>Todays Tasks</strong>
+                            <strong>New Tasks</strong>
                         </summary>
                         <ul>
                             <span class="circle circle-cancel">&times;</span>
