--- a/index.html
+++ b/index.html
@@ -21,15 +21,69 @@
                     <button class="btn btn-outline-light">Add Section</button>
                 </div>
                 <div class="bottom">
-                    <details>
+                    <details id="new-task" open>
                         <summary>
                             <strong>New Tasks</strong>
                         </summary>
                         <ul>
-                            <span class="circle circle-cancel">&times;</span>
-                            <span class=" circle circle-check">&checkmark;</span>
-                            <li>Quarterly Newsletter</li>
-                            <span class="tag-editorial">Editorial</span>
+                            <li>
+                                <span class=" circle circle-check">&checkmark;</span>
+                                Quarterly Newsletter
+                                <span class="tag tag-editorial">Editorial</span>
+                            </li>
+                        </ul>
+                    </details>
+                    <details id="Today"open>
+                        <summary>
+                            <strong>Today</strong>
+                        </summary>
+                        <ul>
+                            <li>
+                                <span class=" circle circle-check">&checkmark;</span>
+                                Recruiting blog post
+                                <span class="tag tag-editorial">Editorial</span>
+                            </li>
+                            <li>
+                                <span class=" circle circle-check">&checkmark;</span>
+                                Mobile app launch
+                                <span class="tag tag-goals">Q1 Goals</span>
+                            </li>
+                            <li>
+                                <span class=" circle circle-cancel">&times;</span>
+                                Interview John H.
+                                <span class="tag tag-recruiting">Recruiting</span>
+                            </li>
+                            <li>
+                                <span class=" circle circle-check">&checkmark;</span>
+                                Summit update to mobile storefronts
+                                <span class="tag tag-mobile">Mobile</span>
+                            </li>
+                        </ul>
+                    </details>
+                    <details id="Upcoming"open>
+                        <summary>
+                            <strong>Upcoming</strong>
+                        </summary>
+                        <ul>
+                            <li>
+                                <span class=" circle circle-cancel">&times;</span>
+                                Schedule meeting with Alex
+                            </li>
+                            <li>
+                                <span class=" circle circle-check">&checkmark;</span>
+                                Homepage refresh
+                                <span class="tag tag-website">Website</span>
+                            </li>
+                            <li>
+                                <span class=" circle circle-check">&checkmark;</span>
+                                Onboard new Sales team members
+                                <span class="tag tag-sales">Sales</span>
+                            </li>
+                            <li>
+                                <span class=" circle circle-check">&checkmark;</span>
+                                Review editorial calendar
+                                <span class="tag tag-editorial">Editorial</span>
+                            </li>
                         </ul>
                     </details>
                 </div>
